# memory-palace

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONVENTIONS.md  CONVENTIONS_V10.md  DISPATCHER_PROMPT.md  DISPATCH_LOG.md  PROJECT_CONTEXT.md  PROJECT_CONTEXT_V10.md  PROMPT_TEMPLATE.md  README.md  SPEC.md  TASK_R17.md  TASK_R18.md  TUTORIAL_V02.md  memory_palace.example.yaml  pyproject.toml  华为昇腾NPU显卡调研与GPU对比_2026-04-09_v2.xlsx
.github/workflows/: ci.yml
docs/: TUTORIAL.md  mcp-setup.md
docs/archive/: HANDOVER_V02.md  Learning_Note.md  NAVIGATION.md  PROMPT_TEMPLATE.md  SPEC_V02.md  TASK_R14.md  TASK_R15.md  TASK_R16.md  TASK_R19.md  TASK_R20.md  TASK_R21.md  TASK_R22.md  TASK_R23.md  TASK_R24.md  TASK_R25.md
examples/: README.md  auto_dream.md  dreamengine.md  generative_agents.md  karpathy_llm_wiki.md  mem0.md  memgpt.md  method_of_loci.md  openclaw.md
scripts/: curator_run.py  memory_inspect.py
src/memory_palace/: __init__.py  config.py
tests/: conftest.py
tests/test_e2e/: test_antigravity_smoke.py  test_automation_e2e.py  test_full_lifecycle.py  test_mcp_e2e.py  test_minimax_real.py  test_v02_integration_fix.py  test_v02_lifecycle.py  test_v10_cli.py  test_v10_final_e2e.py  test_v10_mcp_tools.py  test_v10_mcp_transport.py  test_v10_pipeline.py  test_v10_spec_features.py  test_v10_supplementary.py
tests/test_engine/: test_ebbinghaus.py  test_fact_extractor.py  test_health.py  test_metrics.py  test_reconcile.py  test_reflection.py  test_scoring.py  test_scoring_v2.py
tests/test_foundation/: test_audit_log.py  test_config.py  test_embedding.py  test_llm.py  test_local_embedding.py  test_openai_embedding.py
tests/test_integration/: __init__.py  test_cli.py  test_mcp_concurrent.py  test_mcp_server.py  test_openai_provider.py
tests/test_models/: test_audit.py  test_curator.py  test_memory.py
tests/test_service/: test_batch_io.py  test_context_compiler.py  test_curator.py  test_curator_graph.py  (+8 more)
(+48 files in other folders)
